Исправлено форматирование. Добавлены XML-комментарии

--- a/TestTask/Views/Home/Index.cshtml
+++ b/TestTask/Views/Home/Index.cshtml
@@ -10,7 +10,8 @@
 <head>
     <title>Strings showcase</title>
     <style>
-        table, th, td, tr {
+        table, th, td, tr 
+        {
             border: 1px solid black;
             border-collapse: collapse;
         }
@@ -36,14 +37,10 @@
                             </tr>
                         }
                     }
-
                 </tr>
-
-
-
             }
         </table>
         <input type="submit" value="Submit"/>
-</form>
+        </form>
 </body>
 </html>
